--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -374,6 +374,7 @@ add_executable(main_ui
     ${INCLUDE_DIR}/ui/connectiondialog.h
     ${INCLUDE_DIR}/ui/shortcutedit.h
     ${INCLUDE_DIR}/ui/shortcutssettings.h
+    ${INCLUDE_DIR}/ui/disasm/disasm.h
     ${SRC_DIR}/ui/main.cc
     ${SRC_DIR}/ui/logwidget.cc
     ${SRC_DIR}/ui/veles_mainwindow.cc
@@ -398,6 +399,7 @@ add_executable(main_ui
     ${SRC_DIR}/ui/connectiondialog.cc
     ${SRC_DIR}/ui/shortcutedit.cc
     ${SRC_DIR}/ui/shortcutssettings.cc
+    ${SRC_DIR}/ui/disasm/disasm.cc
     ${RESOURCES}
     ${VISUALIZATION_SHADERS}
     ${FORMS}
